# InternLM-XComposer

./: .gitignore  README.md  README_CN.md  app.py  cog.yaml  predict.py  requirements.txt
InternLM-XComposer-2.0/: .gitignore  .owners.yml
projects/ShareGPT4V/: README.md  app.py  inference-multi-turn.py  pyproject.toml  share-capitioner_batch_infer.py
projects/ShareGPT4V/docs/: Data.md  Evaluation.md  ModelZoo.md
projects/ShareGPT4V/scripts/: convert_gqa_for_eval.py  convert_mmbench_for_submission.py  convert_mmvet_for_eval.py  convert_sqa_to_share4v.py  convert_sqa_to_share4v_base_prompt.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py
projects/ShareGPT4V/scripts/sharegpt4v/: slurm_finetune_13b.sh  slurm_finetune_7b.sh  slurm_pretrain_13b.sh  slurm_pretrain_7b.sh
projects/ShareGPT4V/scripts/sharegpt4v/eval/: gqa.sh  mmbench_cn.sh  mmbench_en.sh  mme.sh  mmvet.sh  qbench.sh  seed.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
projects/ShareGPT4V/share4v/: __init__.py  conversation.py  mm_utils.py  utils.py
projects/ShareGPT4V/share4v/eval/: eval_gpt_review.py  eval_gpt_review_bench.py  eval_gpt_review_visual.py  eval_pope.py  eval_textvqa.py  model_qa.py  model_vqa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_science.py  qa_baseline_gpt35.py  run_share4v.py  summarize_gpt_review.py
projects/ShareGPT4V/share4v/model/: __init__.py  builder.py  share4v_arch.py  utils.py
projects/ShareGPT4V/share4v/train/: share4v_trainer.py  train.py  train_mem.py  train_xformers.py
projects/ShareGPT4V/tools/: app.py  share-cap_batch_infer.py
(+379 files in other folders)
